# Netflix_AI_Agent

./: README.md  main.py  pyproject.toml  requirements.txt
data/: data.ipynb
